--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -89,3 +89,25 @@ video {
   -webkit-background-clip: text;
   color: transparent;
 }
+
+.hoverIcon {
+  width: 500px;
+background-color: linear-gradient(180deg, #3954FF 0%, #1ECE19 100%);
+}
+.cardHover {
+  border-color: transparent;
+  border-width: 1px;
+}
+.cardHover:hover {
+  border-color: #1722FF;
+  border-width: 1px;
+  background-color: #1722FF0A; 
+}
+.cardHover > p:nth-of-type(1) {
+  transition-property: color;
+}
+.cardHover:hover > p:nth-of-type(1) {
+  background-image: linear-gradient(87.28deg, #1722FF 16.85%, #48E642 103.71%);
+  -webkit-background-clip: text;
+  color: transparent;
+}
