--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,17 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
+
+      --sidebar-background: rgb(250, 250, 250);
+      --sidebar-foreground: rgb(62, 61, 61);
+      --sidebar-primary: rgb(26, 26, 26); 
+      --sidebar-primary-foreground: rgb(250, 250, 250);
+      --sidebar-accent: rgb(243, 243, 243);
+      --sidebar-accent-foreground: rgb(26, 26, 26); 
+      --sidebar-border: rgb(228, 228, 228);
+      --sidebar-ring: rgb(29, 177, 246); 
+    
+    
   }
   .dark {
     --background: 0 0% 3.9%;
@@ -69,6 +80,14 @@ body {
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+    --sidebar-background: 240 5.9% 10%;
+    --sidebar-foreground: 240 4.8% 95.9%;
+    --sidebar-primary: 224.3 76.3% 48%;
+    --sidebar-primary-foreground: 0 0% 100%;
+    --sidebar-accent: 240 3.7% 15.9%;
+    --sidebar-accent-foreground: 240 4.8% 95.9%;
+    --sidebar-border: 240 3.7% 15.9%;
+    --sidebar-ring: 217.2 91.2% 59.8%;
   }
 }
 @layer base {
