--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,6 +91,24 @@ body {
   }
 }
 @layer base {
+  :root {
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+  }
+
+  .dark {
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
+  }
+}
+
+@layer base {
   * {
     @apply border-border;
   }
@@ -129,4 +147,16 @@ background-color: linear-gradient(180deg, #3954FF 0%, #1ECE19 100%);
   background-image: linear-gradient(87.28deg, #1722FF 16.85%, #48E642 103.71%);
   -webkit-background-clip: text;
   color: transparent;
+}
+
+.icon-container {
+  height: 52px;
+  width: 57px; /* adjust to control the size  */
+  clip-path: polygon(50% -50%,100% 50%,50% 150%,0 50%);
+  transform: rotate(90deg);
+  border-radius: 8px;
+}
+
+.legend {
+  font-size: 12px;
 }
